<resources>
    <string name="app_name">Expense Splitter</string>
    <string name="make_an_expense_group">Make an expense group</string>
    <string name="view_previous_expense_groups">View previous expense groups</string>
    <string name="expense_splitter">Expense Splitter</string>
    <string name="you_haven_t_made_any_expense_groups_yet">You haven\'t made any expense groups yet</string>
    <string name="what_were_your_expenses">What were your expenses?</string>
    <string name="which_of_your_friends_are_paying">Which of your friends are paying?</string>
    <string name="example_title">example title</string>
    <string name="example_total_amount">example total amount</string>
    <string name="group_name">Group Name</string>
    <string name="group_details_optional">Group Details (Optional)</string>
    <string name="add_expense">Add Expense</string>
    <string name="next">Next</string>
    <string name="expense_name">Expense Name</string>
    <string name="amount">Amount</string>
    <string name="person">Person</string>
    <string name="no_groups">no groups..</string>
    <string name="expenses">Expenses</string>
    <string name="people">People</string>
    <string name="each_person_owes_payer_x">Each person owes payer:</string>
    <string name="total_expenses_amount_x">Total Expenses amount:</string>
    <string name="expense_amount">Expense Amount</string>
    <string name="group_details">Group Details</string>
    <string name="who_is_paying">Who is paying?</string>
    <string name="add_person">Add person</string>
    <string name="edit_group_name">Edit Group Name</string>
    <string name="edit_group_details">Edit Group Details</string>
    <string name="done">Done</string>
    <string name="an_app_made_for_splitting_expenses_equally">a mobile application made for splitting expenses equally</string>
    <string name="number_of_people">Number of People:</string>
    <string name="test">test</string>
    <string name="done_complete_group">Done (Complete Group)</string>
    <string name="minimum_amount_sort">Minimum Amount Sort ($)</string>
</resources>