<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.DisplayGroupFragment"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="50sp"
        android:orientation="vertical"
        android:gravity="center"
        >
        <TextView
            android:id="@+id/groupName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/group_name"
            android:textSize="30sp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/groupDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/group_details"
            android:paddingBottom="60dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expenses"
            android:textStyle="bold"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvExpenses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/people"
            android:textStyle="bold"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvPeople"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/totalExpenses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/total_expenses_amount_x"
                android:layout_marginBottom="10dp"
                />
            <TextView
                android:id="@+id/eachPerson"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/each_person_owes_payer_x"
                />
        </LinearLayout>
    </LinearLayout>
</ScrollView>