<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".ui.fragments.HomeFragment"
    android:orientation="vertical"
    >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expense_splitter"
            android:textSize="40sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
                />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/an_app_made_for_splitting_expenses_equally"
            android:layout_marginBottom="30dp"
                />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/make_an_expense_group"
            style="@style/BAWButton"
            android:layout_marginBottom="16dp"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/BAWButton"
            android:text="@string/view_previous_expense_groups"
            />
</LinearLayout>