<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ui.fragments.MakeExpenseFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/what_were_your_expenses"
        android:textSize="30sp"
        android:layout_margin="20dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingEnd="38dp"
        >
        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/BAWButton"
            android:layout_gravity="start"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="50dp"
            android:text="@string/add_expense"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            style="@style/BAWButton"
            android:text="@string/next"
            />
    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >
        <FrameLayout
            android:id="@+id/llWhatExpenses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvExpenses"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                />
        </FrameLayout>

    </ScrollView>


</LinearLayout>