<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.EditGroupDialogFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardCornerRadius="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="20dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_group_name"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="5dp"
                />
            <EditText
                android:id="@+id/etEditName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_bg"
                android:layout_marginBottom="10sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_group_details"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="5dp"
                />
            <EditText
                android:id="@+id/etEditDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_bg"
                android:layout_marginBottom="25dp"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mbDone"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="20dp"
                style="@style/BAWButton"
                android:text="@string/done"
                />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>